--- a/MyEdu/appsettings.json
+++ b/MyEdu/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EducationDb": ""
+    "EducationDb": "Server=localhost; Port=5432; User ID=postgres; Database=EduCenterDb; password=1996;"
   }
 }
