--- a/MyEdu/appsettings.json
+++ b/MyEdu/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "EducationDb": "Server=localhost; Port=5432; User ID=postgres; Database=EduCenterDb; password=1996;"
+  },
+  "Storage": {
+    "ImageUrl": "Images"
   }
 }
