get videos from youtube

--- a/MyEdu.Service/MyEdu.Service.csproj
+++ b/MyEdu.Service/MyEdu.Service.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	  <PackageReference Include="VideoLibrary" Version="3.1.9" />
+	  <PackageReference Include="YoutubeExplode" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup>
