--- a/MyEdu.Domain/MyEdu.Domain.csproj
+++ b/MyEdu.Domain/MyEdu.Domain.csproj
@@ -10,4 +10,8 @@
     <None Remove="Entities\Groups\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EPPlus" Version="6.0.3" />
+  </ItemGroup>
+
 </Project>
